0531 html-섹션1-내용마무리

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>학원에서 작업을 하고 있습니다..</h1>
+  <h1>학원에서 작업을 하고 있습니다</h1>
+  <p>집에서 작업 마무리했습니다</p>
 </body>
 </html>
