--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <h1>학원에서 작업을 하고 있습니다</h1>
   <p>집에서 작업 마무리했습니다</p>
   <h1>학원에서 내용을 추가했습니다</h1>
+  <p>최종마무리 수정</p>
+  <h3>pull을 하지 않은 상태로 다른 내용을 수정한 상태</h3>
 </body>
 </html>
