--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>학원에서 작업을 하고 있습니다</h1>
+  <h1>에러를 만듭니다</h1>
   <p>집에서 작업 마무리했습니다</p>
   <h1>학원에서 내용을 추가했습니다</h1>
   <p>최종마무리 수정</p>
