--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>학원에서 작업을 하고 있습니다</h1>
+  <h1>머지 오류가 일어났을 때 pull을 이용하여 수정 후 add 와 commit을 통해 다시 push 할 수 있다</h1>
   <p>집에서 작업 마무리했습니다</p>
   <h1>학원에서 내용을 추가했습니다</h1>
-<<<<<<< HEAD
   <p>최종마무리 수정</p>
   <h3>pull을 하지 않은 상태로 다른 내용을 수정한 상태</h3>
-=======
   <p>최종 마무리</p>
->>>>>>> 72e078654e468622cf82c27145a541d6a85bed8d
 </body>
 </html>
